exploratory data analysis has been started

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5d070119",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "engine=create_engine(f\"postgresql+psycopg2://{user_name}:{encoded_password}@{host}:{port}/inventory\")\n",
+    "engine=create_engine(f\"postgresql+psycopg2://{user_name}:{encoded_password}@{host}:{port}/inventory_db2\")\n",
     "logging.info(\"engine created\")"
    ]
   },
@@ -97,7 +97,7 @@
    "outputs": [],
    "source": [
     "def ingest_df(df,table,engine):\n",
-    "    df.to_sql(table,con=engine,if_exists='replace',index=False)\n",
+    "    df.to_sql(table,con=engine,if_exists='append',index=False,chunksize=1000)\n",
     "\n"
    ]
   },
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "72d18bc3",
    "metadata": {},
    "outputs": [],
@@ -136,131 +136,7 @@
    "execution_count": null,
    "id": "6a4c2371",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>VendorNumber</th>\n",
-       "      <th>VendorName</th>\n",
-       "      <th>InvoiceDate</th>\n",
-       "      <th>PONumber</th>\n",
-       "      <th>PODate</th>\n",
-       "      <th>PayDate</th>\n",
-       "      <th>Quantity</th>\n",
-       "      <th>Dollars</th>\n",
-       "      <th>Freight</th>\n",
-       "      <th>Approval</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>105</td>\n",
-       "      <td>ALTAMAR BRANDS LLC</td>\n",
-       "      <td>2024-01-04</td>\n",
-       "      <td>8124</td>\n",
-       "      <td>2023-12-21</td>\n",
-       "      <td>2024-02-16</td>\n",
-       "      <td>6</td>\n",
-       "      <td>214.26</td>\n",
-       "      <td>3.47</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>4466</td>\n",
-       "      <td>AMERICAN VINTAGE BEVERAGE</td>\n",
-       "      <td>2024-01-07</td>\n",
-       "      <td>8137</td>\n",
-       "      <td>2023-12-22</td>\n",
-       "      <td>2024-02-21</td>\n",
-       "      <td>15</td>\n",
-       "      <td>140.55</td>\n",
-       "      <td>8.57</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>388</td>\n",
-       "      <td>ATLANTIC IMPORTING COMPANY</td>\n",
-       "      <td>2024-01-09</td>\n",
-       "      <td>8169</td>\n",
-       "      <td>2023-12-24</td>\n",
-       "      <td>2024-02-16</td>\n",
-       "      <td>5</td>\n",
-       "      <td>106.60</td>\n",
-       "      <td>4.61</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>480</td>\n",
-       "      <td>BACARDI USA INC</td>\n",
-       "      <td>2024-01-12</td>\n",
-       "      <td>8106</td>\n",
-       "      <td>2023-12-20</td>\n",
-       "      <td>2024-02-05</td>\n",
-       "      <td>10100</td>\n",
-       "      <td>137483.78</td>\n",
-       "      <td>2935.20</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>516</td>\n",
-       "      <td>BANFI PRODUCTS CORP</td>\n",
-       "      <td>2024-01-07</td>\n",
-       "      <td>8170</td>\n",
-       "      <td>2023-12-24</td>\n",
-       "      <td>2024-02-12</td>\n",
-       "      <td>1935</td>\n",
-       "      <td>15527.25</td>\n",
-       "      <td>429.20</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   VendorNumber                   VendorName InvoiceDate  PONumber  \\\n",
-       "0           105  ALTAMAR BRANDS LLC           2024-01-04      8124   \n",
-       "1          4466  AMERICAN VINTAGE BEVERAGE    2024-01-07      8137   \n",
-       "2           388  ATLANTIC IMPORTING COMPANY   2024-01-09      8169   \n",
-       "3           480  BACARDI USA INC              2024-01-12      8106   \n",
-       "4           516  BANFI PRODUCTS CORP          2024-01-07      8170   \n",
-       "\n",
-       "       PODate     PayDate  Quantity    Dollars  Freight Approval  \n",
-       "0  2023-12-21  2024-02-16         6     214.26     3.47      NaN  \n",
-       "1  2023-12-22  2024-02-21        15     140.55     8.57      NaN  \n",
-       "2  2023-12-24  2024-02-16         5     106.60     4.61      NaN  \n",
-       "3  2023-12-20  2024-02-05     10100  137483.78  2935.20      NaN  \n",
-       "4  2023-12-24  2024-02-12      1935   15527.25   429.20      NaN  "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
